
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct stat {int dummy; } ;
struct TYPE_2__ {int a; int b; int (* f ) (int ) ;} ;


 int AF_INET ;
 int IPPROTO_RAW ;
 int SOCK_RAW ;
 int a_flags ;
 TYPE_1__* a_list ;
 int aicmp () ;
 int change (int ) ;
 int cicmp ;
 int * dst_class ;
 scalar_t__ dst_ep ;
 scalar_t__ dst_sp ;
 int dstaddr ;
 int exit (int) ;
 int getopt (int,char**,char*) ;
 int optarg ;
 int perror (char*) ;
 int random () ;
 int rawsock ;
 int socket (int ,int ,int ) ;
 int src_class ;
 scalar_t__ src_ep ;
 scalar_t__ src_sp ;
 int stub1 (int ) ;
 int usage (char*) ;
 int usleep (int) ;

int
main(int argc, char *argv[])
{
int n, i, on = 1;
int b_link;



unsigned int until;
a_flags = dstaddr = i = 0;
dst_sp = dst_ep = src_sp = src_ep = 0;
until = b_link = -1;
src_class = dst_class = ((void*)0);
while ( (n = getopt(argc, argv, "Is:h:")) != -1) {
char *p;
switch (n) {
case 'I':
a_flags |= cicmp;
break;
case 'h':
dstaddr = change(optarg);
break;
default:
usage(argv[0]);
break;
}
}
if ( (!dstaddr && !i) ||
(dstaddr && i) ||
( !aicmp()) ||
(src_sp != 0 && src_sp > src_ep) ||
(dst_sp != 0 && dst_sp > dst_ep))
usage(argv[0]);
if ( (rawsock = socket(AF_INET, SOCK_RAW, IPPROTO_RAW)) < 0) {
perror("socket");
exit(-1);
}
for (n = 0; ; ) {
if (b_link != -1 && random() % 100 +1 > b_link) {
if (random() % 200 +1 > 199)
usleep(1);
continue;
}
for (i = 0; a_list[i].f != ((void*)0); ++i) {
if (a_list[i].a & a_flags)
a_list[i].f(a_list[i].b);
}
if (n++ == 100) {
n = 0;
}
}
exit(0);
}
